Construct the "Select All" menuitem from stock.
2005-08-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktextview.c (popup_targets_received):
	* gtk/gtkentry.c (popup_targets_received): Construct
	the "Select All" menuitem from stock.

	* gtk/stock-icons/stock_select_all_{16,24}.png:
	* gtk/stock-icons/Makefile.am:
	* gtk/gtkiconfactory.c:
	* gtk/gtkstock.h:
	* gtk/gtkstock.c: Add a "Select All" stock item.  (#78545,
	Calum Benson)

--- a/docs/reference/gtk/Makefile.am
+++ b/docs/reference/gtk/Makefile.am
@@ -200,6 +200,7 @@ HTML_IMAGES = \
 	$(top_srcdir)/gtk/stock-icons/stock_revert_rtl_24.png		\
 	$(top_srcdir)/gtk/stock-icons/stock_save_24.png			\
 	$(top_srcdir)/gtk/stock-icons/stock_save_as_24.png		\
+	$(top_srcdir)/gtk/stock-icons/stock_select_all_24.png		\
 	$(top_srcdir)/gtk/stock-icons/stock_colorselector_24.png	\
 	$(top_srcdir)/gtk/stock-icons/stock_color_picker_25.png		\
 	$(top_srcdir)/gtk/stock-icons/stock_font_24.png			\
