--- a/gdk/makefile.msc
+++ b/gdk/makefile.msc
@@ -154,7 +154,9 @@ gdkaliasdef.c: gdk.symbols
 
 gdk.def: gdk.symbols
 	echo EXPORTS > gdk.def
-	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 -DGDK_WINDOWING_WIN32 -DALL_FILES gdk.symbols >> gdk.def
+	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 -DGDK_WINDOWING_WIN32 -DALL_FILES \
+		-DG_GNUC_CONST= \
+		gdk.symbols >> gdk.def
 
 libgdk-win32-$(GTK_VER)-0.dll : $(gdk_OBJECTS) gdk.def win32\gdk-win32.lib
 	$(CC) $(CFLAGS) -LD -Fe$@ $(gdk_OBJECTS) win32\gdk-win32.lib $(EXTRALIBS) \
