Require gmodule-no-export-2.0 instead of gmodule-2.0
2005-10-05  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-xlib-2.0.pc.in (Requires): Require
	gmodule-no-export-2.0 instead of gmodule-2.0

--- a/contrib/gdk-pixbuf-xlib/gdk-pixbuf-xlib-2.0.pc.in
+++ b/contrib/gdk-pixbuf-xlib/gdk-pixbuf-xlib-2.0.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: GdkPixbuf Xlib
 Description: GdkPixbuf rendering for Xlib
 Version: @VERSION@
-Requires: gobject-2.0,gmodule-2.0,gdk-pixbuf-2.0
+Requires: gobject-2.0,gmodule-no-export-2.0,gdk-pixbuf-2.0
 Libs: -L${libdir} -lgdk_pixbuf_xlib-@GTK_API_VERSION@
 Cflags: -I${includedir}
