Add a bunch of missing files. Updated Canadian English translation.
2005-10-14  Adam Weinberger  <adamw@gnome.org>

	* POTFILES.in: Add a bunch of missing files.
	* en_CA.po: Updated Canadian English translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -28,7 +28,10 @@ gdk/keyname-table.h
 gdk/win32/gdkmain-win32.c
 gdk/x11/gdkmain-x11.c
 gtk/gtkaboutdialog.c
+gtk/gtkaccelgroup.c
 gtk/gtkaccellabel.c
+gtk/gtkaccelmap.c
+gtk/gtkaccessible.c
 gtk/gtkaction.c
 gtk/gtkactiongroup.c
 gtk/gtkadjustment.c
@@ -36,11 +39,14 @@ gtk/gtkalignment.c
 gtk/gtkarrow.c
 gtk/gtkaspectframe.c
 gtk/gtkbbox.c
+gtk/gtkbin.c
 gtk/gtkbox.c
 gtk/gtkbutton.c
 gtk/gtkcalendar.c
+gtk/gtkcelleditable.c
 gtk/gtkcelllayout.c
 gtk/gtkcellrenderer.c
+gtk/gtkcellrendereraccel.c
 gtk/gtkcellrenderercombo.c
 gtk/gtkcellrendererpixbuf.c
 gtk/gtkcellrendererprogress.c
@@ -49,6 +55,8 @@ gtk/gtkcellrenderertoggle.c
 gtk/gtkcellview.c
 gtk/gtkcheckbutton.c
 gtk/gtkcheckmenuitem.c
+gtk/gtkclipboard.c
+gtk/gtkclist.c
 gtk/gtkcolorbutton.c
 gtk/gtkcolorsel.c
 gtk/gtkcolorseldialog.c
@@ -56,8 +64,12 @@ gtk/gtkcombo.c
 gtk/gtkcombobox.c
 gtk/gtkcomboboxentry.c
 gtk/gtkcontainer.c
+gtk/gtkctree.c
 gtk/gtkcurve.c
 gtk/gtkdialog.c
+gtk/gtkdnd.c
+gtk/gtkdrawingarea.c
+gtk/gtkeditable.c
 gtk/gtkentry.c
 gtk/gtkentrycompletion.c
 gtk/gtkeventbox.c
@@ -65,7 +77,14 @@ gtk/gtkexpander.c
 gtk/gtkfilechooser.c
 gtk/gtkfilechooserbutton.c
 gtk/gtkfilechooserdefault.c
+gtk/gtkfilechooserdialog.c
+gtk/gtkfilechooserembed.c
+gtk/gtkfilechooserentry.c
+gtk/gtkfilechooserutils.c
+gtk/gtkfilechooserwidget.c
+gtk/gtkfilefilter.c
 gtk/gtkfilesel.c
+gtk/gtkfilesystem.c
 gtk/gtkfilesystemmodel.c
 gtk/gtkfilesystemunix.c
 gtk/gtkfilesystemwin32.c
@@ -74,32 +93,57 @@ gtk/gtkfontbutton.c
 gtk/gtkfontsel.c
 gtk/gtkframe.c
 gtk/gtkgamma.c
+gtk/gtkgc.c
 gtk/gtkhandlebox.c
+gtk/gtkhbbox.c
+gtk/gtkhbox.c
+gtk/gtkhpaned.c
+gtk/gtkhruler.c
+gtk/gtkhscale.c
+gtk/gtkhscrollbar.c
+gtk/gtkhseparator.c
+gtk/gtkhsv.c
 gtk/gtkiconfactory.c
 gtk/gtkicontheme.c
 gtk/gtkiconview.c
 gtk/gtkimage.c
 gtk/gtkimagemenuitem.c
+gtk/gtkimcontext.c
+gtk/gtkimcontextsimple.c
 gtk/gtkimmodule.c
+gtk/gtkimmulticontext.c
 gtk/gtkinputdialog.c
 gtk/gtkinvisible.c
+gtk/gtkitem.c
+gtk/gtkitemfactory.c
 gtk/gtklabel.c
 gtk/gtklayout.c
+gtk/gtklist.c
+gtk/gtklistitem.c
+gtk/gtkliststore.c
 gtk/gtkmain.c
 gtk/gtkmenu.c
 gtk/gtkmenubar.c
+gtk/gtkmenuitem.c
+gtk/gtkmenushell.c
 gtk/gtkmenutoolbutton.c
 gtk/gtkmessagedialog.c
 gtk/gtkmisc.c
+gtk/gtkmodules.c
 gtk/gtknotebook.c
+gtk/gtkobject.c
+gtk/gtkoldeditable.c
 gtk/gtkoptionmenu.c
 gtk/gtkpaned.c
 gtk/gtkpathbar.c
+gtk/gtkpixmap.c
+gtk/gtkplug.c
 gtk/gtkpreview.c
 gtk/gtkprogress.c
 gtk/gtkprogressbar.c
 gtk/gtkradioaction.c
 gtk/gtkradiobutton.c
+gtk/gtkradiomenuitem.c
 gtk/gtkradiotoolbutton.c
 gtk/gtkrange.c
 gtk/gtkrc.c
@@ -107,36 +151,63 @@ gtk/gtkruler.c
 gtk/gtkscale.c
 gtk/gtkscrollbar.c
 gtk/gtkscrolledwindow.c
+gtk/gtkselection.c
+gtk/gtkseparator.c
 gtk/gtkseparatortoolitem.c
 gtk/gtksettings.c
 gtk/gtksizegroup.c
+gtk/gtksocket.c
 gtk/gtkspinbutton.c
 gtk/gtkstatusbar.c
+gtk/gtkstatusicon.c
 gtk/gtkstock.c
+gtk/gtkstyle.c
 gtk/gtktable.c
+gtk/gtktearoffmenuitem.c
 gtk/gtktext.c
 gtk/gtktextbuffer.c
+gtk/gtktextchild.c
+gtk/gtktextdisplay.c
+gtk/gtktextlayout.c
+gtk/gtktextmark.c
 gtk/gtktexttag.c
+gtk/gtktexttagtable.c
 gtk/gtktextutil.c
 gtk/gtktextview.c
 gtk/gtkthemes.c
 gtk/gtktipsquery.c
 gtk/gtktoggleaction.c
 gtk/gtktogglebutton.c
+gtk/gtktoggletoolbutton.c
 gtk/gtktoolbar.c
 gtk/gtktoolbutton.c
 gtk/gtktoolitem.c
+gtk/gtktooltips.c
+gtk/gtktrayicon-x11.c
+gtk/gtktree.c
+gtk/gtktreednd.c
+gtk/gtktreeitem.c
+gtk/gtktreemodel.c
 gtk/gtktreemodelfilter.c
 gtk/gtktreemodelsort.c
+gtk/gtktreeselection.c
+gtk/gtktreesortable.c
+gtk/gtktreestore.c
 gtk/gtktreeview.c
 gtk/gtktreeviewcolumn.c
+gtk/gtktypeutils.c
 gtk/gtkuimanager.c
+gtk/gtkvbbox.c
+gtk/gtkvbox.c
 gtk/gtkviewport.c
+gtk/gtkvpaned.c
+gtk/gtkvruler.c
+gtk/gtkvscale.c
+gtk/gtkvscrollbar.c
+gtk/gtkvseparator.c
 gtk/gtkwidget.c
+gtk/gtkwindow-decorate.c
 gtk/gtkwindow.c
-gtk/gtkmenushell.c
-gtk/gtkradiomenuitem.c
-gtk/gtktoggletoolbutton.c
 modules/input/gtkimcontextxim.c
 modules/input/imam-et.c
 modules/input/imcedilla.c
