--- a/gdk-pixbuf/Makefile.am
+++ b/gdk-pixbuf/Makefile.am
@@ -370,7 +370,7 @@ gdk-pixbuf-enum-types.h: s-enum-types-h
 	@true
 
 s-enum-types-h: @REBUILD@ $(gdk_pixbuf_headers) Makefile
-	( cd $(srcdir) && glib-mkenums \
+	( cd $(srcdir) && $(GLIB_MKENUMS) \
 			--fhead "#ifndef __GDK_PIXBUF_ENUM_TYPES_H__\n#define __GDK_PIXBUF_ENUM_TYPES_H__\n\n#include <glib-object.h>\n\nG_BEGIN_DECLS\n" \
 			--fprod "/* enumerations from \"@filename@\" */\n" \
 			--vhead "GType @enum_name@_get_type (void) G_GNUC_CONST;\n#define GDK_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n"         \
@@ -387,7 +387,7 @@ MAINTAINERCLEANFILES += s-enum-types-h
 # gdk-pixbuf-enum-types.c
 #
 gdk-pixbuf-enum-types.c: @REBUILD@ $(gdk_pixbuf_headers) Makefile
-	(cd $(srcdir) && glib-mkenums \
+	(cd $(srcdir) && $(GLIB_MKENUMS) \
 		--fhead "#include <gdk-pixbuf/gdk-pixbuf.h>\n#include \"gdk-pixbuf-alias.h\"\n" \
 		--fprod "\n/* enumerations from \"@filename@\" */" \
 		--ftail "\n#define __GDK_PIXBUF_ENUM_TYPES_C__\n#include \"gdk-pixbuf-aliasdef.c\"" \
