fixed missing $X_CFLAGS setup in case x11.pc is present.
Mon Nov  7 16:15:16 2005  Tim Janik  <timj@imendio.com>

        * configure.in: fixed missing $X_CFLAGS setup in case x11.pc is present.

--- a/configure.in
+++ b/configure.in
@@ -1049,6 +1049,7 @@ if test "x$gdktarget" = "xx11"; then
     have_base_x_pc=true
     X_PACKAGES="$X_PACKAGES x11 xext"
     x_libs="`pkg-config --libs x11 xext`"
+    X_CFLAGS="`pkg-config --cflags x11 xext`"
     
     # Strip out any .la files that pkg-config might give us (this happens
     # with -uninstalled.pc files)
